--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -48,7 +48,9 @@
     @apply prose-headings:!mb-3 prose-headings:!text-skin-base prose-h3:italic prose-p:!text-skin-base prose-a:!text-skin-base prose-a:!decoration-dashed prose-a:underline-offset-8 hover:prose-a:text-skin-accent prose-blockquote:!border-l-skin-accent/50 prose-blockquote:opacity-80 prose-figcaption:!text-skin-base prose-figcaption:opacity-70 prose-strong:!text-skin-base prose-code:rounded prose-code:bg-skin-card/75 prose-code:p-1 prose-code:before:!content-none prose-code:after:!content-none prose-ol:!text-skin-base prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-base prose-table:text-skin-base prose-th:border prose-th:border-skin-line prose-td:border prose-td:border-skin-line prose-img:!my-2 prose-img:mx-auto prose-img:border-2 prose-img:border-skin-line prose-hr:!border-skin-line;
   }
   .prose a {
-    @apply break-words hover:!text-skin-accent no-underline !text-gray-400;
+    text-decoration-thickness: 1px; /* 设置下划线的厚度 */
+    text-underline-offset: 2px;
+    @apply break-words hover:!text-skin-accent underline !decoration-solid !text-zinc-500;
   }
   .prose thead th:first-child,
   tbody td:first-child,
@@ -64,8 +66,12 @@
   .prose h2#table-of-contents + p {
     @apply hidden;
   }
+  .prose ul {
+    @apply my-0;
+  }
   .prose ul ul {
     list-style-type: circle; /* 使用小圆圈样式 */
+    @apply my-0;
   }
   /* ===== scrollbar ===== */
   html {
