change bg color

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -7,7 +7,7 @@
   prose-h3:font-Verdana prose-h3:text-l prose-h3:leading-none
   prose-h2:mt-2 prose-h1:mt-6
   prose-a:text-blue-600 prose-p:text-justify 
-  prose-img:rounded-xl
+  prose-img:rounded-xl !border-0
   prose-p:mt-3
   prose-p:mb-3
   prose-base
